Stockholm: fix problem where an emoticon could cause an empty vertical scrollbar. (transplanted from b8898185b4996c039036859c99082a3aba3be44d)

--- a/Resources/Message Styles/Stockholm.AdiumMessageStyle/Contents/Resources/Styles/main.css
+++ b/Resources/Message Styles/Stockholm.AdiumMessageStyle/Contents/Resources/Styles/main.css
@@ -219,7 +219,7 @@ body
 .x-message .x-text
 {
 	line-height: 1.3em;
-	overflow: auto;
+	/*overflow: auto;*/
 	padding-bottom: 1px;
 }
 
